包名修改，新增工具类SHA1,Zip